# benge-property-cad

./: .autoconfig.yaml  .gitignore  AGENTS.md  BENGE_PROPERTY_CAD_REPOSITORY_MIGRATION_PLAN.md  BengeBackyard.20260713-143601.FCBak  BengeBackyard.20260713-154513.FCBak  BengeBackyard.20260713-225851.FCBak  BengeBackyard.20260713-233446.FCBak  BengeBackyard.FCStd  README.md  REPO_SPLIT_PROMPT_PLAN.md  RebuildBengeBackyard.FCMacro  back_opencode.jsonc  build.py  config.py  drawing_annotations.py  helpers.py  install.py  model.py  opencode.jsonc  pyproject.toml  start.sh  update_tools.py
.agents/: README.md
.agents/agents/: README.md  benge-design-maintainer.md  cad-compatibility-verifier.md  file-artifact-reviewer.md  file-design-maintainer.md  general-contractor.md  save.md  (+2 more)
.back_agents/: README.md
.opencode/: opencode.jsonc
.tools/: install.py  manifest.json  update_tools.py
.tools/templates/project/: .gitignore  AGENTS.md  README.md  config.py  model.py  params.yaml  pyproject.toml
backup/: .gitignore  AGENTS.md  Build.FCMacro  ConfigureParams.FCMacro  InitRepo.FCMacro  Project.FCMacro  README.md  Revert.FCMacro  build.py  helpers.py  install.py  macro_actions.py  update_tools.py
project_tests/: test_benge_project.py
tests/: conftest.py  test_build_end_to_end.py  test_config_contract.py  test_drawing_annotations.py  test_model_contract.py  test_model_geometry.py  test_viewer_e2e.py  test_workflow_policy.py  verify_model_contract_v1.py
viewer/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+144 files in other folders)
